<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    tools:background="@color/bgDeep"
    tools:context=".BillFundSalesFragment">
    
    <com.mingz.share.ui.ShowText
        android:id="@+id/fund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fund"/>
    
    <TextView
        android:id="@+id/useless1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fund"
        android:layout_marginTop="10dp"
        android:text="@string/salesTime"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/smallText"/>
    
    <com.mingz.share.ui.ShowDateTime
        android:id="@+id/salesTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/useless1"
        android:layout_marginTop="5dp"/>
    
    <TextView
        android:id="@+id/useless2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salesTime"
        android:layout_marginTop="10dp"
        android:text="@string/inAccountTime"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/smallText"/>
    
    <com.mingz.share.ui.ShowDateTime
        android:id="@+id/inAccountTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/useless2"
        android:layout_marginTop="5dp"/>
    
    <TextView
        android:id="@+id/useless3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inAccountTime"
        android:layout_marginTop="10dp"
        android:text="@string/confirmVal"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/smallText"/>
    
    <TextView
        android:id="@+id/confirmVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirmAmount"
        app:layout_constraintTop_toBottomOf="@id/useless3"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/bg_fill_when_enable"
        tools:text="0.0000"
        android:textColor="@color/commonText"
        android:textSize="@dimen/mediumText"
        android:gravity="center_vertical"/>
    
    <TextView
        android:id="@+id/confirmAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/confirmVal"
        app:layout_constraintEnd_toStartOf="@id/charges"
        app:layout_constraintTop_toTopOf="@id/confirmVal"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/bg_fill_when_enable"
        tools:text="0.0000"
        android:textColor="@color/commonText"
        android:textSize="@dimen/mediumText"
        android:gravity="center_vertical"/>
    
    <TextView
        android:id="@+id/charges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/confirmAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/confirmVal"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/bg_stroke"
        tools:text="0.0000"
        android:textColor="@color/commonText"
        android:textSize="@dimen/mediumText"
        android:gravity="center_vertical"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/confirmAmount"
        app:layout_constraintTop_toTopOf="@id/useless3"
        android:text="@string/confirmAmount"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/smallText"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/charges"
        app:layout_constraintTop_toTopOf="@id/useless3"
        android:text="@string/charges"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/smallText"/>
    
    <com.mingz.share.ui.TextWithUnits
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charges"
        android:layout_marginTop="10dp"
        app:title="@string/price"/>
    
    <com.mingz.share.ui.ShowText
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price"
        android:layout_marginEnd="10dp"
        app:title="@string/incomeAccount"/>
    
    <com.mingz.share.ui.ShowText
        android:id="@+id/remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account"
        android:layout_marginTop="10dp"
        app:title="@string/remark"
        app:editable="true"
        android:hint="@string/remarkHint"
        tools:text=""/>
    
    <include
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        layout="@layout/layout_control_bill"/>

</androidx.constraintlayout.widget.ConstraintLayout>