<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    tools:background="@color/bgDeep"
    tools:context=".BillFundDividendFragment">
    
    <com.mingz.share.ui.ShowDateTime
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <com.mingz.share.ui.TextWithUnits
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time"
        android:layout_marginTop="10dp"
        app:title="@string/price"/>
    
    <com.mingz.share.ui.ShowText
        android:id="@+id/fund"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price"
        android:layout_marginEnd="10dp"
        app:title="@string/fund"/>
    
    <CheckBox
        android:id="@+id/redo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price"
        android:layout_marginTop="10dp"
        android:text="@string/redo"
        android:textColor="@color/check_box_text_color"
        android:textSize="@dimen/mediumText"
        android:theme="@style/CheckBoxStyle"
        tools:enabled="false"/>
    
    <!-- 否再投资. -->
    <com.mingz.share.ui.ShowText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redo"
        android:layout_marginTop="10dp"
        app:title="@string/incomeAccount"/>
    
    <!-- 再投资. -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/whenRedo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="useless1,useless2,fundVal,increment"/>
    
    <TextView
        android:id="@+id/useless1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redo"
        android:layout_marginTop="10dp"
        android:text="@string/fundNetVal"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/mediumText"/>
    
    <TextView
        android:id="@+id/fundVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/increment"
        app:layout_constraintTop_toBottomOf="@id/useless1"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/bg_fill_when_enable"
        tools:text="0.0000"
        android:textColor="@color/commonText"
        android:textSize="@dimen/mediumText"
        android:gravity="center_vertical"/>
    
    <TextView
        android:id="@+id/increment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/fundVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fundVal"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/bg_stroke"
        tools:text="0.0000"
        android:textColor="@color/commonText"
        android:textSize="@dimen/mediumText"
        android:gravity="center_vertical"/>
    
    <TextView
        android:id="@+id/useless2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/increment"
        app:layout_constraintTop_toTopOf="@id/useless1"
        android:text="@string/incrementAmount"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/mediumText"/>
    
    <!--<com.mingz.share.ui.ShowText
        android:id="@+id/remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inAccount"
        android:layout_marginTop="10dp"
        app:title="@string/remark"
        app:editable="true"
        android:hint="@string/remarkHint"
        tools:text=""/>-->
    
    <include
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        layout="@layout/layout_control_bill"/>

</androidx.constraintlayout.widget.ConstraintLayout>